fixed z-index bug

--- a/src/pages/styles/globals.css
+++ b/src/pages/styles/globals.css
@@ -31,6 +31,7 @@ a {
 .home {
   width: 100vw;
   position: relative;
+  z-index: 1;
 }
 
 .bg {
